[tool.poetry]
name = "novasystem"
version = "0.1.0"
description = "NovaSystem: An open-source AI SDK licensed under GPL-3, designed to facilitate the integration of AI into various projects. It offers a comprehensive toolkit for developers, with a requirement for users to open source their projects under the same license when using NovaSystem code. Ideal for community-driven developments and advancing AI applications."
authors = ["Christopher Tavolazzi <ctavolazzi@gmail.com>"]
license = "GNU GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.0"
Flask-Migrate = "^4.0.5"
Flask-WTF = "^1.2.1"
Flask-RESTful = "^0.3.10"
tensorflow = "^2.15.0"
scikit-learn = "^1.3.2"
torch = "^1.0.2"
openai = "^1.3.5"
transformers = "^4.35.2"
marshmallow = "^3.20.1"
Flask-JWT-Extended = "^4.5.3"
Flask-Security = "^3.0.0"
Flask-Login = "^0.6.3"
oauth2 = "^1.9.0.post1"
pytest = "^7.4.3"
grafana = "^0.0.1"
flask-swagger-ui = "^4.11.1"
celery = "^5.3.6"
art = "^6.1"
colorama = "^0.4.6"
tqdm = "^4.66.1"
fastapi = "^0.104.1"
typer = {extras = ["all"], version = "^0.9.0"}
uvicorn = "^0.24.0.post1"
pyinstaller = "^6.2.0"
sphinx = "^7.2.6"
pyqt5 = "^5.15.10"
jinja2 = "^3.1.2"
numpy = "^1.26.2"
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
novasystem = "novasystem.main:main"

[[tool.poetry.packages]]
include = "novasystem"
from = "src"