[tool.poetry]
name = "novasystem"
version = "0.1.0"
description = "description = "NovaSystem: An open-source AI SDK licensed under GPL-3, designed to facilitate the integration of AI into various projects. It offers a comprehensive toolkit for developers, with a requirement for users to open source their projects under the same license when using NovaSystem code. Ideal for community-driven developments and advancing AI applications."
authors = ["Christopher Tavolazzi <ctavolazzi@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
openai = "^1.3.5"
google-api-python-client = "^2.108.0"
art = "^6.1"
colorama = "^0.4.6"
typer = "^0.9.0"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
transformers = "^4.35.2"
torch = "^2.1.1"
bitsandbytes = "^0.41.2.post2"
accelerate = "^0.24.1"
scipy = "^1.11.4"
numpy = "^1.26.2"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
idna = "3.6"
urllib3 = "2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start-app = "novasystem:main"
